--- a/index.html
+++ b/index.html
@@ -41,17 +41,6 @@
     </div>
     </div>
     <canvas class="board"></canvas>
-    
-    <div class="sticky-pad">
-        <div class="navbar">
-            <div class="close"></div>
-            <div class="minimize"></div>
-        </div>
-        <div class="textbox">
-
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-        </div>
-    </div>
     <script>
         let board = document.querySelector(".board");
 
@@ -82,6 +71,7 @@
             // aspect ratio manage 
         }
     </script>
+    <script src="sticky.js"></script>
     <script src="tool.js"></script>
     <script src="draw.js"></script>
 </body>
