implemented Undo functionality

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                 <img src="./icons/Download.svg" alt="" id="download" class="tool-img">
                 <input type="file" id="file-upload">
             </div>
+            <div class="tool">
+                <img src="./icons/Undo.svg" alt="" id="undo" class="tool-img">
+            </div>
         </div>
     </div>
     </div>
